--- a/package.json
+++ b/package.json
@@ -20,5 +20,12 @@
   "bugs": {
     "url": "https://github.com/atreyucore/js-tdd-course/issues"
   },
-  "homepage": "https://github.com/atreyucore/js-tdd-course#readme"
+  "homepage": "https://github.com/atreyucore/js-tdd-course#readme",
+  "devDependencies": {
+    "eslint": "^3.10.1",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.1",
+    "eslint-plugin-react": "^6.7.1"
+  }
 }
